MSBuildTasks: Add infrastructure to get GIT info
Provide classes and a framework to get source control information. This first implementation only supports GIT. This will be used later by a new MSBuild task to be part of the build system.

The RevisionControl task is intended to get important revision control information from the current path. A project can use this information to update metadata for the binaries it builds.

Detailed documentation and design information provided in `docs/design/revision.md`.

Issue: DOTNET-375

--- a/msbuild/buildtasks/buildtasks/Resources.resx
+++ b/msbuild/buildtasks/buildtasks/Resources.resx
@@ -192,4 +192,25 @@
   <data name="X509_TimeStamp_Invalid" xml:space="preserve">
     <value>The timestamp URI '{0}' is not valid.</value>
   </data>
+  <data name="Infra_Source_UnknownProvider" xml:space="preserve">
+    <value>Unknown source provider</value>
+  </data>
+  <data name="Git_ToolsNotAvailable" xml:space="preserve">
+    <value>GIT tools not available</value>
+  </data>
+  <data name="Git_UnexpectedOutput" xml:space="preserve">
+    <value>GIT returned unexpected output</value>
+  </data>
+  <data name="Git_Error" xml:space="preserve">
+    <value>GIT returned error {0}</value>
+  </data>
+  <data name="Git_LogUnexpectedOutput" xml:space="preserve">
+    <value>GIT 'log' returned unexpected output for path '{0}'</value>
+  </data>
+  <data name="Git_LogNoCommits" xml:space="preserve">
+    <value>GIT 'log' returned no commits for path '{0}'</value>
+  </data>
+  <data name="Git_InvalidIso8601" xml:space="preserve">
+    <value>GIT ISO8601 format unrecognized</value>
+  </data>
 </root>
