MSBuildTasks: Implement RevisionControl Task and SemVer Task
The RevisionControl task can help a project define the label that should be applied to a project, get the commit information and branch information, which can then be used to determine how to modify metadata for the library.

It is not as full featured as other projects, such as GitTools.GitVersion (https://github.com/GitTools/GitVersion). It uses the native GIT installed on your operating system (instead of using a precompiled library).

One of the known issues when testing is that caching sometimes causes problems as the `dotnet` binary remains running in the background, so changes to the revision control system aren't always noticed.

Issue: DOTNET-375

--- a/msbuild/buildtasks/buildtasks/Resources.resx
+++ b/msbuild/buildtasks/buildtasks/Resources.resx
@@ -231,4 +231,37 @@
   <data name="Infra_SemVer_MustBePositive" xml:space="preserve">
     <value>{0} field must be a positive integer</value>
   </data>
+  <data name="RevisionControl_PathNotDefined" xml:space="preserve">
+    <value>Path must be provided (it can't be empty).</value>
+  </data>
+  <data name="RevisionControl_PathMustBeDirectory" xml:space="preserve">
+    <value>Path provided is a file, it must be a directory.</value>
+  </data>
+  <data name="RevisionControl_PathDirectoryDoesntExist" xml:space="preserve">
+    <value>Path provided doesn't exist.</value>
+  </data>
+  <data name="RevisionControl_UnknownStrictMode" xml:space="preserve">
+    <value>The Strict mode isn't recognized.</value>
+  </data>
+  <data name="RevisionControl_RevisionControlTypeNotDefined" xml:space="preserve">
+    <value>The Revision Control Type is not defined.</value>
+  </data>
+  <data name="RevisionControl_CantInstantiateProvider" xml:space="preserve">
+    <value>Couldn't determine the source provider.</value>
+  </data>
+  <data name="RevisionControl_IsDirty" xml:space="preserve">
+    <value>Revision Control Filesystem indicates files have been modified. Please check in. Path is '{0}'.</value>
+  </data>
+  <data name="RevisionControl_NotLabelled" xml:space="preserve">
+    <value>Label '{0}' not found in Revision Control, or contents have changed. Path is '{1}'.</value>
+  </data>
+  <data name="RevisionControl_LabelNotDefined" xml:space="preserve">
+    <value>No label provided in project file and strict mode is enabled.</value>
+  </data>
+  <data name="SemVer_VersionNotProvided" xml:space="preserve">
+    <value>The version parameter is empty.</value>
+  </data>
+  <data name="SemVer_VersionNotSupported" xml:space="preserve">
+    <value>The version '{0}' is not supported.</value>
+  </data>
 </root>
