MSBuildTasks: Errors from GIT are now more obvious
When an error is raised from GIT, it was difficult to determine the root cause from the build logs. Now the command that was executed, the working directory, the exit code and the output of the command are reported to the user.

To make the implementation easier, a new specific exception was created, that can raise the data at the point the exception is found, which contains the precise command and its results that lead to the error.

Issue: DOTNET-393

--- a/msbuild/buildtasks/buildtasks/Resources.resx
+++ b/msbuild/buildtasks/buildtasks/Resources.resx
@@ -202,7 +202,7 @@
     <value>GIT returned unexpected output</value>
   </data>
   <data name="Git_Error" xml:space="preserve">
-    <value>GIT returned error {0}</value>
+    <value>GIT error</value>
   </data>
   <data name="Git_LogUnexpectedOutput" xml:space="preserve">
     <value>GIT 'log' returned unexpected output for path '{0}'</value>
